Reports menu done. Adding final touches